compleated blog page and its component

--- a/templates/index.html
+++ b/templates/index.html
@@ -166,21 +166,21 @@
                 <div class="about__data">
                     <div class="about__info">
                         <div class="about__box">
-                            <i class='bx bx-award about__icon'></i>
-                            <h3 class="about__title">Experence</h3>
-                            <span class="about__subtitle">1 Working Years</span>
+                            <i class='bx bx-bulb about__icon'></i>
+                            <h3 class="about__title">Creative</h3>
+                            <span class="about__subtitle">रचनात्मक</span>
                         </div>
 
                         <div class="about__box">
-                            <i class='bx bx-briefcase-alt about__icon'></i>
-                            <h3 class="about__title">Compleated</h3>
-                            <span class="about__subtitle"></span>10+ Project
+                            <i class='bx bxs-bulb about__icon' ></i>
+                            <h3 class="about__title">Innovator</h3>
+                            <span class="about__subtitle">अन्वेषक</span>
                         </div>
 
                         <div class="about__box">
-                            <i class='bx bx-support about__icon'></i>
-                            <h3 class="about__title">Support</h3>
-                            <span class="about__subtitle">24/7</span>
+                            <i class='bx bx-slideshow about__icon'></i>
+                            <h3 class="about__title">Communicator</h3>
+                            <span class="about__subtitle">संचारक</span>
                         </div>
                     </div>
 
@@ -352,44 +352,31 @@
 
                             <h3 class="services__modal-title">Front-end Solutions</h3>
                             <p class="services__modal-description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta magnam dolorem, hic ad
+                               " refractoring beauty from imagination to reality "
                             </p>
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        i develop user intraction
+                                        Web and app design
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
+                                        Ui / UX
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
+                                        3D modelling using Blender
                                     </p>
                                 </li>
 
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -408,42 +395,28 @@
 
                             <h3 class="services__modal-title">Back-end Solutions</h3>
                             <p class="services__modal-description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta magnam dolorem, hic ad
+                                " connecting every bits for robost infra "
                             </p>
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        i develop user intraction
+                                        Backend frameworks
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
+                                        Automation (inludes ML, DS, IoT) 
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
+                                        Databases (SQL and NoSQL)
                                     </p>
                                 </li>
                             </ul>
@@ -464,44 +437,31 @@
 
                             <h3 class="services__modal-title">Creativity Solutions</h3>
                             <p class="services__modal-description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta magnam dolorem, hic ad
+                                " when creativity meets innovation "
                             </p>
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        i develop user intraction
+                                        Content writing
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
+                                        Photography <a href="">protfolio</a>
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon'></i>
                                     <p class="services__modal-info">
-                                        somelist text
+                                        artfacts 
                                     </p>
                                 </li>
 
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-item">
-                                    <i class='bx bx-check services__modal-icon'></i>
-                                    <p class="services__modal-info">
-                                        somelist text
-                                    </p>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -515,30 +475,28 @@
             <h3 class="section__title">BLOGS</h3>
 
             <div class="work__filters">
-                <span class="work__item active-work" data-filter="all">All</span>
-                <span class="work__item" data-filter=".web">Web</span>
-                <span class="work__item" data-filter=".movie">Movie</span>
-                <span class="work__item" data-filter=".design">Design</span>
+                <span class="work__item active-work blogtop" data-filter="all">Top</span>
+                <a href="/blog" class="button button--ghost">all blogs</a>
             </div>
 
             <div class="work__container container grid">
                 <div class="work__card mix web">
                     <img src="assets\img\work1.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Test1</h3>
+                    <h3 class="work__title">{{posts[-1].title}}</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    <a href="{{ url_for('show_post', index=posts[-1].id) }}" class="work__button">
+                         read more<i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movie">
                     <img src="assets\img\work2.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Test2</h3>
+                    <h3 class="work__title">{{posts[-2].title}}</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    <a href="{{ url_for('show_post', index=posts[-2].id) }}" class="work__button">
+                        read more <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
@@ -572,9 +530,7 @@
 
             <div class="work__filters">
                 <span class="work__item active-work" data-filter="all">All</span>
-                <span class="work__item" data-filter=".web">Web</span>
-                <span class="work__item" data-filter=".movie">Movie</span>
-                <span class="work__item" data-filter=".design">Design</span>
+                <a href="/blog" class="button button--ghost">all podcast</a>
             </div>
 
             <div class="work__container container grid">
@@ -667,7 +623,7 @@
                 <div class="container__content">
                     <h3 class="contact__title">Write me your project/request</h3>
 
-                    <form action="" class="contact__form">
+                    <form action="mailto:sahilgovekarfreelancing@gmail.com" class="contact__form">
                         <div class="contact__form-div">
                             <label for="" class="contact__form-tag">Name/Title of request</label>
                             <input type="text" placeholder="insert your name" class="contact__form-input">
