--- a/templates/post.html
+++ b/templates/post.html
@@ -33,35 +33,13 @@
     </header>
 
     <!--=============== MAIN ===============-->
-    <main class="main">
-        <!--=============== HOME ===============-->
-        <section class="home section" id="home">
-            <div class="home__container container grid">
-                <div class="home__data">
-                    <span class="home__greeting">Welcome to the</span>
-                    <h1 class="home__name">Blog</h1>
-                    <h3 class="home__education">where intrest meets intresting</h3>
-
-                    <div class="home__buttons">
-                        <a download="" href="" class="button button--ghost">
-                            Buy me cofee
-                        </a>
-                        <a href="/" class="button">Home</a>
-                    </div>
-                </div>
-
-
-            </div>
-        </section>
     
     <!-- blog list -->
     <section class="about section" id="about">
 
         <div class="about__container container grid">
 
-
             <div>
-                {% for post in posts %}
                 <div class="about__data">
                     <h2>{{post.title}}</h2>
                     <br>
@@ -74,17 +52,12 @@
                     </div>
     
                     <p class="about__description">
-                        {{post.content[:150]}}
+                        {{post.content}}
                     </p>
     
-                    <a href="{{ url_for('show_post', index=post.id) }}" class="button">Read More</a>
-                    <br><br>
+                    <a href="/blog" class="button">Back</a>
                 </div>
-
-                
-                {% endfor %}
             </div>
-            
 
              
         </div>
